# WalrusHub

./: .clang-format  .gitignore  README.md  meson.build
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  build.yaml
assets/: styles.css
include/: app_context.h  board.h  books_window.h  color.h  editor_window.h  game_window.h  gtk_board.h  gtk_eval_bar.h  gtk_table.h  gtkgoban.h  http.h  katago_client.h  log.h  main_window.h  meson.build  play_ai_preset_window.h  play_ai_window.h  settings_window.h  solve_preset_window.h  solve_window.h  stats.h  stats_window.h  task.h  window.h
lib/: meson.build
lib/http/: meson.build
lib/http/include/: http.h
lib/http/src/: http.cc
lib/log/: meson.build
lib/log/include/: log.h
lib/log/src/: log.cc
lib/wq/: meson.build
lib/wq/include/: wq.h
lib/wq/src/: wq.cc
src/: app_context.cc  board.cc  books_window.cc  editor_window.cc  game_window.cc  gtk_board.cc  gtk_eval_bar.cc  gtk_table.cc  gtkgoban.cc  http.cc  katago_client.cc  main_window.cc  meson.build  play_ai_preset_window.cc  play_ai_window.cc  settings_window.cc  solve_preset_window.cc  solve_window.cc  stats.cc  stats_window.cc  task.cc  task_import_101weiqi.cc  walrushub.cc  window.cc
