main_source = files(
    'app_context.cc',
    'board.cc',
    'editor_window.cc',
    'gtkgoban.cc',
    'http.cc',
    'main_window.cc',
    'solve_preset_window.cc',
    'solve_window.cc',
    'stats.cc',
    'stats_window.cc',
    'task.cc',
    'task_import_101weiqi.cc',
    'walrushub.cc',
    'window.cc',
)
project_sources += main_source