main_source = files(
    'app_context.cc',
    'editor_window.cc',
    'game_window.cc',
    'gtk_board.cc',
    'gtk_eval_bar.cc',
    'gtk_table.cc',
    'katago_client.cc',
    'main_window.cc',
    'play_ai_preset_window.cc',
    'play_ai_window.cc',
    'settings_window.cc',
    'solve_preset_window.cc',
    'solve_window.cc',
    'stats.cc',
    'stats_window.cc',
    'task.cc',
    'task_import_101weiqi.cc',
    'walrushub.cc',
    'window.cc',
)
project_sources += main_source